<resources>
    <string name="app_name">Moorgan</string>


    <!-- TODO: Register 1 -->

    <string name="name_information">Ingrese su nombre</string>
    <string name="name_hint">Nombre</string>

    <string name="last_name_information">Ingrese su apellido</string>
    <string name="last_name_hint">Apellido</string>

    <!-- TODO: Register 2 -->

    <string name="birthdate_information">Ingrese su fecha de nacimiento</string>
    <string name="birthdate_hint">Fecha de nacimiento</string>

    <string name="career_information">Ingrese su profesión</string>
    <string name="career_hint">Profesión</string>

    <!-- TODO: Register 2 -->
    <string name="msg">Tu perfil esta completo</string>

    <!-- TODO: Register Activity -->

    <string name="toast_no_more_pages">No hay mas páginas</string>

    <!-- TODO: Job Item -->

    <string name="more_information">Más información</string>


    <!-- TODO: newClientJob Fragment -->
    <string name="new_job">Nuevo trabajo</string>
    <string name="new_client">Nuevo cliente</string>

    <!-- TODO: new client Fragment -->
    <string name="client_name">Nombe del cliente</string>
    <string name="client_phone_number">Número de teléfono</string>
    <string name="button_save_client">Guardar</string>

    <!-- TODO: new job Fragment -->
    <string name="select_client">Seleccione los clientes</string>
    <string name="job_name">Ingrese el nombre del trabajo</string>
    <string name="job_end_date">Ingrese la fecha de finalización</string>
    <string name="job_end_date_hint">Fecha de finalización</string>
    <string name="job_payment">Ingrese el monto a cobrar</string>
    <string name="job_payment_hint">Ej: 1200000</string>

    <string name="job_status">Fases del trabajo</string>
    <string name="job_status_inicial">Fase inicial</string>
    <string name="job_status_medium">Fase media</string>
    <string name="job_status_final">Fase final</string>
    <string name="job_status_new">Fase nueva</string>


    <!-- TODO: Toast Messages -->
    <string name="empty_field">Rellene los campos</string>
    <string name="string_is_not_numeric">Verifique el número ingresado</string>
    <string name="error_client_add">error al ingresar el cliente</string>
    <string name="successful_client_add">Nuevo cliente agregado</string>

</resources>