<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.NewJob">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/ic_new_job"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_new_job"
                android:layout_marginTop="80dp"/>


            <TextView
                android:id="@+id/select_clients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/select_client"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp" />

            <ImageView
                android:id="@+id/add_clients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_client_add"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/job_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/job_name"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20dp" />


            <EditText
                android:id="@+id/field_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/name_hint"
                android:background="@drawable/register_field_border"/>

            <TextView
                android:id="@+id/job_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_end_date"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"/>


            <EditText
                android:id="@+id/field_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/job_end_date_hint"
                android:background="@drawable/register_field_border"/>

            <TextView
                android:id="@+id/job_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_payment"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/field_payment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/job_payment_hint"
                android:background="@drawable/register_field_border"/>

            <TextView
                android:id="@+id/job_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_status"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"/>

            <LinearLayout
                android:id="@+id/status_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <ImageButton
                android:id="@+id/add_status"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:src="@drawable/ic_add"
                android:background="@drawable/register_field_border"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="130dp"
                android:layout_marginRight="130dp"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/save_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/save_client_button_border"
                android:text="@string/button_save_client"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="110dp"
                android:layout_marginRight="110dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>