<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Register1">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/ic_user_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_user_register"
            android:layout_marginTop="80dp"/>

        <TextView
            android:id="@+id/name_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_information"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="50dp"/>

        <EditText
            android:id="@+id/field_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/name_hint"
            android:background="@drawable/register_field_border"/>

        <TextView
            android:id="@+id/last_name_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name_information"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/field_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/last_name_hint"
            android:background="@drawable/register_field_border"/>




    </LinearLayout>

</RelativeLayout>